fix docker hub repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker build -t uda-simple-node .
-  - docker tag uda-simple-node $DOCKER_HUB/uda-simple-node:${TRAVIS_BUILD_NUMBER}
+  - docker tag uda-simple-node $DOCKER_HUB/uda-simple-node:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
